# agent-eval-lab

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  f-ablation-roster.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/2026-06-10-dataset-grader-quality/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md  calibration-provisional-summary.md  calibration-runbook.md  comparison-report.md  review-ledger.md  rubric.md  run-doc-sync.md  run-final-verify.md  taxonomy.md  validation-report.md
docs/2026-06-10-tool-use-slice/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/2026-06-11-coding-agent-eval/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md  final-evaluation-report.md  prices.json  review-ledger.md  rubric.md  run-doc-sync.md  run-final-verify.md  taxonomy.md  v2-context.md
docs/2026-06-13-agentic-v1-domains-runs/: B1-LIVE-RUNBOOK.md  EXECUTE-DEFERRED.md  HANDOFF-010.md  MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/2026-06-13-agentic-v1-eval-foundation/: HANDOFF.md  MASTER-PLAN.md  MASTER-SPEC.md  PREFLIGHT.md  PROGRESS.md  SKIPPED.md
docs/2026-06-15-harness-rounds-f-ablation/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md  run-doc-sync.md  run-final-verify.md
docs/2026-06-16-claude-p-f-baseline/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
learning/: eval-rigor-answer-key.md  eval-rigor-worksheets.md
tests/: test_cli.py  test_committed_runs.py  test_dset_no_leak.py  test_dset_resume.py  test_golden_conformance.py
(+548 files in other folders)
