[project]
name = "agent-eval-lab"
version = "0.5.1"
description = "A portfolio-driven laboratory for reproducible AI agent evaluations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "snowshine0216" }]
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.21",
]

[project.scripts]
agent-eval-lab = "agent_eval_lab.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6.100",
  "pytest>=9.0.0",
  "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval_lab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
